/*
 * CHANGELOG.
 */

03112007 - Removed zlib_license_change.txt ... it's in Subversion and the 1.0
           branch for history's sake.
03082007 - Fixed a comment in physfs.h. Renamed win32.c to windows.c.
           Cleaned up whitespace/formatting in pocketpc.c. Updated PocketPC
           code to expect UTF-8 strings from the higher level. Changed
           PHYSFS_SUPPORTS_LZMA to PHYSFS_SUPPORTS_7Z. Killed some #ifdefs
           in physfs.c. Moved to CMake...so long, autotools! Killed MIX
           archiver, too.
11052006 - More 7zip archiver work (thanks, Dennis!). Initial Unicode work.
           Minor BeOS realpath tweak.
09272006 - Reworked 7zip archiver (thanks, Dennis!).
09232006 - Fixed typo in doxygen comment.
04112006 - Added LZMA archiver...7zip support (thanks, Dennis!).
03232006 - Added -fvisibility for gcc4 (http://gcc.gnu.org/wiki/Visibility)
01012006 - Cleaned up overflow checks in platform memory allocators (thanks to
           Nicolas Lebedenco for pointing out the original issue with
           long long literals). Added physfs.rc (thanks, Dennis!). Changed my
           email address. Removed acconfig.h.
11282005 - Corrected docs on PHYSFS_setWriteDir().
10122005 - Fixed locateInStringList() in physfs.c (thanks, Matze!). Patched
           archivers/wad.c to compile.
09192005 - Make unix mutexes recursive above pthread layer...fixes deadlock on
           MacOS X, for now.
09182005 - API BREAKAGE: PHYSFS_enumerateFilesCallback() now passes the
           original directory name back to the app in the callback. This
           API was only in 1.1.0, and wasn't promised to be stable at this
           point. Please update your apps! Cleaned out a FIXME in file
           enumeration that would confuse the library under certain
           circumstances.
09092005 - Some tweaks to PHYSFS_Allocator. Apparently configure.in doesn't
           work like I thought for version bumps, so it thinks 1.1.0 isn't